--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,6 +12,7 @@
 
 html, body {
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -19,12 +20,14 @@ html, body {
 body {
   color: $DefaultFontColor;
   font-size: 1.1rem;
-  background-color: rgb(10, 10, 10);
-  height: 100%;
-  
+  background-color: $DefaultSiteBgColor;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
-// FONTS =============================================================================
+body::-webkit-scrollbar {
+  display: none;
+}
 
 // #region Font: "Poppins"
 .poppins-extralight {
@@ -86,4 +89,8 @@ body {
   font-weight: 900;
   font-style: italic;
 }
+// #endregion
+
+// #region MEDIA QUERIES ==========================================================
+
 // #endregion
